first-section-done

--- a/index.html
+++ b/index.html
@@ -10,10 +10,34 @@
     <script src='main.js'></script>
     <!-- css link -->
     <link rel="stylesheet" href="style.css">
+    <!-- popins link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
+    <!-- kit code -->
+    <script src="https://kit.fontawesome.com/c6401dcd66.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <section class="first-section">
+        <div class="first-div">
+            <h1 class="first-section-text-padding first-heading">
+                The Greatest
+                show on the
+                earth
+            </h1>
+            <p class="first-section-text-padding first-paragraph">
+                Contrary to popular belief, Lorem Ipsum is not simply
 
+                random text. It has roots in a piece of classical Latin literature
+                from 45 BC, making it over 2000 years old.
+            </p>
+            <a href="">Watch Live <i class=" fa-solid fa-angle-right"></i></a>
+        </div>
+        <div class="messi-img"></div>
+    </section>
 </body>
 
 </html>
