second section half done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;700&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;500;700&display=swap"
+        rel="stylesheet">
+
     <!-- kit code -->
     <script src="https://kit.fontawesome.com/c6401dcd66.js" crossorigin="anonymous"></script>
 </head>
@@ -34,9 +40,48 @@
                 random text. It has roots in a piece of classical Latin literature
                 from 45 BC, making it over 2000 years old.
             </p>
-            <a href="">Watch Live <i class=" fa-solid fa-angle-right"></i></a>
+            <a href="">Watch Live <i class=" fa-solid fa-angle-right watch-live-anchor"></i></a>
         </div>
         <div class="messi-img"></div>
+    </section>
+    <section class="second-section">
+        <div class="section-two-anchor-div">
+            <div class="section-two-anchor">
+                <a class="anchor-one" href="">Upcoming Match</a>
+            </div>
+            <div class="section-two-anchor">
+                <a class="anchor-two" href="">All Group</a>
+            </div>
+            <div class="section-two-anchor">
+                <a class="anchor-three" href="">Blog</a>
+            </div>
+        </div>
+        <div class="section-two-transfer-divs">
+            <div class="section-two-transfer-div">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="without-img">
+                    <div>
+                        <a href="">Transfer</a>
+                    </div>
+                    <div class="transfer-paragraph">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="hour-comment">
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-clock"></i>
+                            <p>10h</p>
+                        </div>
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-message"></i>
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
     </section>
 </body>
 
