second-section-done

--- a/index.html
+++ b/index.html
@@ -80,8 +80,192 @@
                     </div>
                 </div>
             </div>
+            <div class="section-two-transfer-div">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="without-img">
+                    <div>
+                        <a href="">Transfer</a>
+                    </div>
+                    <div class="transfer-paragraph">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="hour-comment">
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-clock"></i>
+                            <p>10h</p>
+                        </div>
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-message"></i>
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-two-transfer-div">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="without-img">
+                    <div>
+                        <a href="">Transfer</a>
+                    </div>
+                    <div class="transfer-paragraph">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="hour-comment">
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-clock"></i>
+                            <p>10h</p>
+                        </div>
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-message"></i>
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-two-transfer-div">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="without-img">
+                    <div>
+                        <a href="">Transfer</a>
+                    </div>
+                    <div class="transfer-paragraph">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="hour-comment">
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-clock"></i>
+                            <p>10h</p>
+                        </div>
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-message"></i>
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-two-transfer-div">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="without-img">
+                    <div>
+                        <a href="">Transfer</a>
+                    </div>
+                    <div class="transfer-paragraph">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="hour-comment">
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-clock"></i>
+                            <p>10h</p>
+                        </div>
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-message"></i>
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-two-transfer-div">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="without-img">
+                    <div>
+                        <a href="">Transfer</a>
+                    </div>
+                    <div class="transfer-paragraph">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="hour-comment">
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-clock"></i>
+                            <p>10h</p>
+                        </div>
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-message"></i>
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-two-transfer-div">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="without-img">
+                    <div>
+                        <a href="">Transfer</a>
+                    </div>
+                    <div class="transfer-paragraph">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="hour-comment">
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-clock"></i>
+                            <p>10h</p>
+                        </div>
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-message"></i>
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-two-transfer-div">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="without-img">
+                    <div>
+                        <a href="">Transfer</a>
+                    </div>
+                    <div class="transfer-paragraph">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="hour-comment">
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-clock"></i>
+                            <p>10h</p>
+                        </div>
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-message"></i>
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-two-transfer-div">
+                <div>
+                    <img src="images/Blog Image.png" alt="">
+                </div>
+                <div class="without-img">
+                    <div>
+                        <a href="">Transfer</a>
+                    </div>
+                    <div class="transfer-paragraph">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="hour-comment">
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-clock"></i>
+                            <p>10h</p>
+                        </div>
+                        <div class="hour-comment-div">
+                            <i class="fa-regular fa-message"></i>
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        </div>
+
     </section>
 </body>
 
