footer-almost-done

--- a/index.html
+++ b/index.html
@@ -268,5 +268,19 @@
 
     </section>
 </body>
+<footer>
+    <div class="footer-heading">
+        <h1>Goal</h1>
+    </div>
+    <hr>
+    <div class="footer-paragraph">
+        <p>Contact Us</p>
+        <p>Terms of Service</p>
+        <p>Privacy Policy</p>
+        <p>Privacy Settings</p>
+        <p>Goal App</p>
+        <p>Goal Live</p>
+    </div>
+</footer>
 
 </html>
