--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <!-- kit code -->
     <script src="https://kit.fontawesome.com/c6401dcd66.js" crossorigin="anonymous"></script>
+    <!-- upcoming-match link  -->
+    <link rel="stylesheet" href="upcoming-match.html">
 </head>
 
 <body>
@@ -47,7 +49,7 @@
     <section class="second-section">
         <div class="section-two-anchor-div">
             <div class="section-two-anchor">
-                <a class="anchor-one" href="">Upcoming Match</a>
+                <a class="anchor-one" href="upcoming-match.html">Upcoming Match</a>
             </div>
             <div class="section-two-anchor">
                 <a class="anchor-two" href="">All Group</a>
